--- a/barbearia2.0/public/stylesheets/style.css
+++ b/barbearia2.0/public/stylesheets/style.css
@@ -1,8 +1,213 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@100&display=swap');
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-family: 'Tapestry', cursive;
+    margin: 0;
+    background-color: black;
+}
+
+#navbar {
+    background-color: black;
+    height: 4em;
+    margin-right: 3%;
+    margin-bottom: 1%;
+    margin-top: 0.3%;
+}
+
+#navbar a {
+    float: right;
+    color: white;
+    text-decoration: none;
+    position: relative;
+    margin-right: 5%;
+    margin-top: 1.5%;
+}
+
+#navbar img {
+    float: right;
+    width: 64px;
+    border-radius: 10px;
+    padding-right: 2px;
+}
+
+#principal {
+    color: white;
+    font-family: 'Montserrat';
+    background: linear-gradient(rgba(56, 22, 1, 0.7), rgba(44, 17, 1, 0.7), rgba(24, 8, 0, 0.7)), url('../IMG/barbearia.jpg');
+    background-size: 100%;
+    text-align: center;
+    padding-top: 15%;
+    padding-bottom: 15%;
+    margin-bottom: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    height: 150px;
+    border: 2px solid white;
+}
+
+#principal h1 {
+    margin: 0;
+}
+
+#principal p {
+    font-size: 1.7em;
+}
+
+#navegacao {
+    font-family: 'Montserrat';
+    background: linear-gradient(rgba(54, 21, 0, 0.7), rgba(28, 10, 0, 0.7));
+    color: white;
+    text-align: center;
+    margin-top: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    /*overflow: scroll;*/
+}
+
+#navegacao img,
+#sobre img {
+    border-radius: 10px;
+}
+
+#navegacao a {
+    float: right;
+    color: white;
+    text-decoration: none;
+    margin-right: 5%;
+    margin-top: 2%;
+    position: relative;
+}
+
+.item-foto {
+    display: inline-block;
+    object-fit: cover;
+    margin-left: 0;
+    text-align: center;
+    align-items: center;
 }
 
 a {
-  color: #00B7FF;
+    margin-right: 0;
+    margin-top: 0;
+    position: relative;
+}
+
+#sobre h2,
+p {
+    margin-bottom: 3%;
+}
+
+#cortes {
+    font-family: 'Montserrat';
+    background: linear-gradient(rgba(54, 21, 0, 0.7), rgba(28, 10, 0, 0.7));
+    color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cortes-lista {
+    display: flex;
+    flex-direction: column;
+}
+
+#img-cortes {
+    display: flex;
+}
+
+#cortes-lista img {
+    border-radius: 15px;
+    padding: 8px;
+}
+
+#texto-cortes {
+    padding: 10px;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.image {
+    width: 350px;
+    height: 350px;
+}
+
+footer {
+    /* vermelho (E3), verde (BA), azul (B3) */
+    background: linear-gradient(to top, rgba(54, 21, 0, 0.7), rgba(28, 10, 0, 0.7));
+    text-align: center;
+    padding: 1%;
+    color: white;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-radius: 10px;
+    height: none;
+}
+
+/* Animação de traço nas opções da barra de navegação */
+a:before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+a:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+/* efeito de ir aparecendo(opacidade) */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+#container {
+    -webkit-animation: fadeIn 2s ease-in-out;
+    -moz-animation: fadeIn 2s ease-in-out;
+    -o-animation: fadeIn 2s ease-in-out;
+    animation: fadeIn 2s ease-in-out;
+}
+
+@media screen and (max-width: 1400) {
+    .image {
+        width: 200px;
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .image {
+        width: 130px;
+        height: 130px;
+    }
 }
