--- a/barbearia2.0/public/stylesheets/style.css
+++ b/barbearia2.0/public/stylesheets/style.css
@@ -33,7 +33,7 @@ body {
 #principal {
     color: white;
     font-family: 'Montserrat';
-    background: linear-gradient(rgba(56, 22, 1, 0.7), rgba(44, 17, 1, 0.7), rgba(24, 8, 0, 0.7)), url('../IMG/barbearia.jpg');
+    background: linear-gradient(rgba(56, 22, 1, 0.7), rgba(44, 17, 1, 0.7), rgba(24, 8, 0, 0.7)), url('https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/barbearia.jpg?raw=true');
     background-size: 100%;
     text-align: center;
     padding-top: 15%;
