--- a/barbearia2.0/views/index.pug
+++ b/barbearia2.0/views/index.pug
@@ -10,8 +10,8 @@ html(lang='pt-br')
     #container
       header
         #navbar
-          img(src="../IMG/image/dono.png")
-          a(href='index.html') Início
+          img(src="https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/image/dono.png?raw=true")
+          a(href='/index.pug') Início
           a(href='./HTML/sobre.html') Sobre
           a(href='./HTML/localizacao.html') Localização
           a(href='./HTML/contato.html') Contato
@@ -23,15 +23,15 @@ html(lang='pt-br')
           h2 Navegue pelo site
           .item-foto
             a(href='./HTML/joias.html')
-              img(src='./IMG/relogio-joalheria.jpg' width='250' height='250')
+              img(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/relogio-joalheria.jpg?raw=true' width='250' height='250')
             a(href='./HTML/joias.html') Joalheria
           .item-foto
             a(href='./HTML/roupas.html')
-              img(src='./IMG/roupas-roupas.jpg' width='250' height='250')
+              img(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/roupas-roupas.jpg?raw=true' width='250' height='250')
             a(href='./HTML/roupas.html') Roupas
           .item-foto
             a(href='./HTML/cosmeticos.html')
-              img(src='./IMG/hidratante-cosmeticos.jpg' width='250' height='250')
+              img(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/hidratante-cosmeticos.jpg?raw=true' width='250' height='250')
             a(href='./HTML/cosmeticos.html') Cosméticos
         #cortes
           #texto-cortes
@@ -39,10 +39,10 @@ html(lang='pt-br')
             h2 Cliente sempre satisfeito
           #cortes-lista
             #img-cortes
-              img.image(src='../IMG/corte01.jpg')
-              img.image(src='../IMG/corte02.jpeg')
+              img.image(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/corte01.jpg?raw=true')
+              img.image(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/corte02.jpeg?raw=true')
             #img-cortes
-              img.image(src='../IMG/corte03.jpeg')
-              img.image(src='../IMG/corte04.jpeg')
+              img.image(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/corte03.jpeg?raw=true')
+              img.image(src='https://github.com/Ronaldo913/projeto-3bimestre-pweb/blob/main/barbearia2.0/IMG/corte04.jpeg?raw=true')
       footer
         | São Sebastião - 2022
